[gd_scene load_steps=34 format=2]

[ext_resource path="res://Player.gd" type="Script" id=1]
[ext_resource path="res://running.png" type="Texture" id=2]
[ext_resource path="res://idel.png" type="Texture" id=3]
[ext_resource path="res://jump.png" type="Texture" id=4]

[sub_resource type="Curve" id=4]
_data = [ Vector2( 0, 0.181818 ), 0.0, 0.0, 0, 0, Vector2( 0.704762, 0.409091 ), 0.709091, 4.63636, 0, 0, Vector2( 1, 1 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="RectangleShape2D" id=30]
extents = Vector2( 13, 24 )

[sub_resource type="Animation" id=5]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("SpriteParent/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CollisionShape2D:shape:extents")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 13, 24 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("CollisionShape2D:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 8 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("CollisionShape2D:shape")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ SubResource( 30 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("SpriteParent/Sprite:texture")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ ExtResource( 3 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("SpriteParent/Sprite:hframes")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 4 ]
}

[sub_resource type="Animation" id=6]
resource_name = "Run"
length = 0.3
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("CollisionShape2D:shape:extents")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 31.5, 49.5 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CollisionShape2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0.5, 1.5 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("SpriteParent/Sprite:hframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 3 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("SpriteParent/Sprite:texture")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 2 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("SpriteParent/Sprite:frame")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 0 ]
}

[sub_resource type="Animation" id=7]
resource_name = "dive"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("SpriteParent/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CollisionShape2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("CollisionShape2D:shape:extents")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 31.5, 49.5 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("SpriteParent/Sprite:hframes")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 2 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("SpriteParent/Sprite:texture")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 4 ) ]
}

[sub_resource type="Animation" id=8]
resource_name = "fall"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("SpriteParent/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 1 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CollisionShape2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("CollisionShape2D:shape:extents")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 24, 48 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("SpriteParent/Sprite:texture")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 4 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("SpriteParent/Sprite:hframes")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 2 ]
}

[sub_resource type="Animation" id=9]
resource_name = "idel"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("CollisionShape2D:shape:extents")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 24, 49.5 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CollisionShape2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 1.5 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("SpriteParent/Sprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("SpriteParent/Sprite:texture")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 3 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("SpriteParent/Sprite:hframes")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 4 ]
}

[sub_resource type="Animation" id=10]
resource_name = "jump"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("CollisionShape2D:shape:extents")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 32, 49.5 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CollisionShape2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 1.5 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("SpriteParent/Sprite:hframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 2 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("SpriteParent/Sprite:texture")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 4 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("SpriteParent/Sprite:frame")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}

[sub_resource type="Animation" id=11]
resource_name = "roll"
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath("SpriteParent/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.8 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ "dove" ],
"method": "emit_signal"
} ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("CollisionShape2D:shape:extents")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 21.5, 49.5 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("CollisionShape2D:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 1.5 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("SpriteParent/Sprite:texture")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 4 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("SpriteParent/Sprite:hframes")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 2 ]
}

[sub_resource type="AnimationNodeAnimation" id=12]
animation = "Run"

[sub_resource type="AnimationNodeAnimation" id=13]
animation = "dive"

[sub_resource type="AnimationNodeAnimation" id=14]
animation = "fall"

[sub_resource type="AnimationNodeAnimation" id=15]
animation = "idel"

[sub_resource type="AnimationNodeAnimation" id=16]
animation = "jump"

[sub_resource type="AnimationNodeAnimation" id=17]
animation = "roll"

[sub_resource type="AnimationNodeStateMachineTransition" id=18]

[sub_resource type="AnimationNodeStateMachineTransition" id=19]

[sub_resource type="AnimationNodeStateMachineTransition" id=20]

[sub_resource type="AnimationNodeStateMachineTransition" id=21]

[sub_resource type="AnimationNodeStateMachineTransition" id=22]

[sub_resource type="AnimationNodeStateMachineTransition" id=23]

[sub_resource type="AnimationNodeStateMachineTransition" id=24]

[sub_resource type="AnimationNodeStateMachineTransition" id=25]

[sub_resource type="AnimationNodeStateMachineTransition" id=26]

[sub_resource type="AnimationNodeStateMachineTransition" id=27]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=28]
switch_mode = 2
auto_advance = true

[sub_resource type="AnimationNodeStateMachine" id=2]
states/Run/node = SubResource( 12 )
states/Run/position = Vector2( 258.14, 80 )
states/dive/node = SubResource( 13 )
states/dive/position = Vector2( 565.14, 80 )
states/fall/node = SubResource( 14 )
states/fall/position = Vector2( 565.14, 159.55 )
states/idel/node = SubResource( 15 )
states/idel/position = Vector2( 415, 80 )
states/jump/node = SubResource( 16 )
states/jump/position = Vector2( 415, 159.55 )
states/roll/node = SubResource( 17 )
states/roll/position = Vector2( 415, 1.61249 )
transitions = [ "idel", "Run", SubResource( 18 ), "Run", "idel", SubResource( 19 ), "idel", "dive", SubResource( 20 ), "fall", "idel", SubResource( 21 ), "idel", "fall", SubResource( 22 ), "jump", "fall", SubResource( 23 ), "idel", "jump", SubResource( 24 ), "jump", "dive", SubResource( 25 ), "fall", "dive", SubResource( 26 ), "dive", "roll", SubResource( 27 ), "roll", "idel", SubResource( 28 ) ]
start_node = "idel"
end_node = "idel"
graph_offset = Vector2( 109.905, -22.5 )

[sub_resource type="AnimationNodeStateMachinePlayback" id=3]

[sub_resource type="CapsuleShape2D" id=29]
radius = 32.0
height = 16.0

[node name="Player" type="KinematicBody2D"]
script = ExtResource( 1 )
acceleration_curve = SubResource( 4 )
jump_height = 288.0
jump_time_to_peak = 0.45
jump_time_to_descent = 0.35

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 8 )
shape = SubResource( 30 )

[node name="SpriteParent" type="Node2D" parent="."]

[node name="Sprite" type="Sprite" parent="SpriteParent"]
texture = ExtResource( 3 )
hframes = 4

[node name="JumpGraceTimer" type="Timer" parent="."]
wait_time = 0.07
one_shot = true

[node name="AccelerationTimer" type="Timer" parent="."]
wait_time = 0.3
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 5 )
anims/Run = SubResource( 6 )
anims/dive = SubResource( 7 )
anims/fall = SubResource( 8 )
anims/idel = SubResource( 9 )
anims/jump = SubResource( 10 )
anims/roll = SubResource( 11 )

[node name="AnimationTree" type="AnimationTree" parent="AnimationPlayer"]
tree_root = SubResource( 2 )
anim_player = NodePath("..")
active = true
parameters/playback = SubResource( 3 )

[node name="TaskArea2D" type="Area2D" parent="."]
scale = Vector2( 1e-05, 1e-05 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="TaskArea2D"]
shape = SubResource( 29 )
disabled = true

[node name="Control" type="Control" parent="."]
margin_left = -72.0
margin_top = -80.0
margin_right = 72.0
margin_bottom = -32.0
mouse_filter = 2

[node name="GridContainer" type="GridContainer" parent="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
columns = 2

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="GridContainer" type="GridContainer" parent="CanvasLayer/Control"]
anchor_top = 0.689
anchor_right = 0.4
anchor_bottom = 0.778
margin_left = 40.0
margin_top = -8.04001
margin_bottom = -0.0800171
grow_horizontal = 2
mouse_filter = 2
columns = 4

[node name="-1" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( -40, 0 )

[node name="1" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 40, 0 )

[node name="2" type="RayCast2D" parent="."]
cast_to = Vector2( 0, 0 )

[connection signal="dove" from="." to="." method="_on_Player_dove"]
[connection signal="area_entered" from="TaskArea2D" to="." method="_on_TaskArea2D_area_entered"]
